# FairFace_Modeling

./: .gitignore  README.md  pyproject.toml  runthis.sh  setup.py  train_test_split.json  train_test_val.json
data/encodings/: age_encoding.json  gender_encoding.json  race_encoding.json
fairface_classification/: ann_layers.py  data.py  metrics.py  mobilenetv3.py  model.py  resnet_model.py  train.py  utils.py
notebooks/: 14012024-model-train-resnet.ipynb  22072023-model-train.ipynb  24012024-backbone-CLtrain-resnet.ipynb  model_train_22072023.ipynb
src/fairface_classification/: data.py
src/fairface_classification.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
