[tool.poetry]
name = "fairface-classification"
version = "0.1.0"
description = "Study-purpose project to learn to fine-tune already pre-trained CNN deep learning model. Dataset was taken from paperswithcode.com website and all scores that I could benchmark from the model I trained are compared with ones from the origin paper where the creators of the dataset noted their own results on their own data."
authors = ["trybushenko <tribushenko02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.25.1"
pandas = "2.0.3"
matplotlib = "3.7.2"
torchvision = "0.15.2"
torch = "2.0.1"
Pillow = "10.0.0"
tqdm = "4.66.1"
seaborn = "0.12.2"
scikit-learn = "1.3.0"
tensorboard = "^2.14.0"
gdown = "4.5.4"
byol-pytorch = "0.8.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
